Add find name engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ qt_add_executable(NAME_Radar
     centralwidget.h centralwidget.cpp
     StructUSE.h
     jsonsettings.h jsonsettings.cpp
+    searchnames.h searchnames.cpp
+    sortfilebydate.h sortfilebydate.cpp
 )
 
 target_link_libraries(NAME_Radar
