Update some UI feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ qt_add_executable(NAME_Radar
     searchnames.h searchnames.cpp
     sortfilebydate.h sortfilebydate.cpp
     heavyworkthread.h heavyworkthread.cpp
+    highlightlineedit.h highlightlineedit.cpp
 
 )
 
